# wcc

./: .gitignore  Cargo.toml  Makefile  README.md  pre-commit.sh
.github/workflows/: fmt.yml  release_amd64.yml  rust.yml
snap/: snapcraft.yaml
src/: claims.rs  ctl.rs  drain.rs  keys.rs  main.rs  par.rs  reg.rs  up.rs  util.rs
src/ctl/: mod.rs  output.rs
src/up/: mod.rs  repl.rs  standalone.rs
tests/: common.rs  integration_ctl.rs  integration_reg.rs  integration_up.rs
tools/: kvcounter-example.sh
