[package]
name = "wash"
version = "0.1.1"
authors = ["Brooks Townsend <brooks.townsend@capitalone.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.18"
env_logger = "0.7.1"
serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["derive"] }
crossbeam = "0.7.3"

nkeys = "0.0.11"
latticeclient = "0.4.0"
wascap = "0.5.1"
term-table = "1.3.0"
provider-archive = "0.1.1"
